dp-label.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-label
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 50m
              memory: 100Mi
      nodeSelector:
        usercase: workload
