dp-taint.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-taint
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 50m
              memory: 100Mi
      nodeSelector:
        usercase: workload
      tolerations:
      - effect: NoSchedule
        key: dedicated
        value: "true"
