nginx-mf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-mf
  labels:
    env: prod
  annotations:
    prometheus.io/scrape: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd
          livenessProbe:
            httpGet:
              port: 80
              path: /
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            exec:
              command:
              - curl
              - http://127.0.0.1:80
