nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources:
      requests:
        cpu: 50m
        memory: 100Mi
      limits:
        cpu: 50m
        memory: 100Mi
    volumeMounts:
    - mountPath: /etc/nginx/sites-enabled/config.conf
      name: site-config
      subPath: nginx.conf
  volumes:
  - name: site-config
    configMap:
      name: nginx-conf
