redis-kv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-kv
spec:
  containers:
  - image: redis
    name: redis
  - image: bitnami/redis-exporter
    name: redis-exporter
