web-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dp
spec:
  replicas: 4
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd
