nginx-svc-ext.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-svc-ext
spec:
 type: LoadBalancer
 selector:
   app: httpd
 ports:
 - port: 80
   targetPort: 80
