nginx-svc-int.yaml
apiVersion: v1
kind: Service
metadata:
 name: nginx-svc-int
spec:
 type: ClusterIP
 selector:
   app: httpd
 ports:
 - port: 80
   targetPort: 80
