nginx-dp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
spec:
  rules:
  - host: test.ingress.rebrainme.com
    http:
      paths:
      - backend:
          serviceName: nginx-svc
          servicePort: 80
